--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "antd": "^4.9.4",
+    "axios": "^1.4.0",
+    "i18next": "^19.8.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.5",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -44,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.7",
     "typescript-plugin-css-modules": "^3.0.1"
   }
