--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.9.4",
     "axios": "^1.4.0",
     "i18next": "^19.8.4",
+    "jwt-decode": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.5",
@@ -22,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
